test/fail/prog-t.rnp
1
---
 --> fail/prog-t.rnp:1:1
  |
1 | 1
  | ^ Program expected void but got number
  |
